--- a/package/thoughtbound.desktop
+++ b/package/thoughtbound.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
-Name=Lisp Jam Spring 2023
-Exec=lisp-jam-spring-2023
+Name=Thoughtbound
+Exec=thoughtbound
 Terminal=false
 Categories=Game;
 Icon=icon
