--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup
-        run: ln -s `pwd` /root/quicklisp/local-projects/
       - name: Build package
         run: ./package.sh linux
       - name: Archive package
@@ -32,11 +30,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup
-        run: ln -s `pwd` /root/.wine/drive_c/users/root/quicklisp/local-projects/
       - name: Build package
         # NOTE: Github actions fuck up Docker's ENTRYPOINT, hence this atrocity
-        run: set +e; . /opt/quasi-msys2/env/all.src; WINEPATH="/ucrt64/bin;C:\Program Files (x86)\NSIS" PKG_CONFIG_PATH="Z:/ucrt64/lib/pkgconfig" wine busybox sh ./package.sh windows
+        run: set +e; . /opt/quasi-msys2/env/all.src; WINEPATH="Z:/ucrt64/bin;C:/Program Files (x86)/NSIS" PKG_CONFIG_PATH="Z:/ucrt64/lib/pkgconfig" CC=gcc-wrapper wine busybox sh ./package.sh windows
       - name: Archive package
         uses: actions/upload-artifact@v3
         with:
